--- a/src/index.html
+++ b/src/index.html
@@ -1,74 +1,133 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
-  <title>Frontend Mentor | myteam website challenge - Homepage</title>
-</head>
-<body>
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="./images/favicon-32x32.png"
+    />
 
+    <title>Frontend Mentor | myteam website challenge - Homepage</title>
+  </head>
+  <body>
+    <!--
   home
   about
-
   contact us
+  -->
 
+    <main>
+      <header>
+        <h1>
+          Find the <br />
+          best <span>talent</span>
+        </h1>
 
+        <p>
+          Finding the right people and building high performing teams can be
+          hard. Most companies aren’t tapping into the abundance of global
+          talent. We’re about to change that.
+        </p>
+      </header>
 
-  Find the best talent
+      <section>
+        <h2>Build & manage distributed teams like no one else.</h2>
 
-  Finding the right people and building high performing teams can 
-  be hard. Most companies aren’t tapping into the abundance of global 
-  talent. We’re about to change that.
+        <ul>
+          <li>
+            <div>
+              <img src="" alt="Icon of People with Experience" />
+            </div>
+            <div>
+              <h5>Experienced Individuals</h5>
+              <p>
+                Our network is made up of highly experienced professionals who
+                are passionate about what they do.
+              </p>
+            </div>
+          </li>
+          <li>
+            <div>
+              <img src="" alt="Icon of Easy to Implement" />
+            </div>
+            <div>
+              <h5>Easy to Implement</h5>
+              <p>
+                Our processes have been refined over years of implementation
+                meaning our teams always deliver.
+              </p>
+            </div>
+          </li>
+          <li>
+            <div>
+              <img src="" alt="Icon of Enhanced Productivity" />
+            </div>
+            <div>
+              <h5>Enhanced Productivity</h5>
+              <p>
+                Our customized platform with in-built analytics helps you manage
+                your distributed teams.
+              </p>
+            </div>
+          </li>
+        </ul>
+      </section>
 
+      <section>
+        <h2>
+          Delivering real results for top <br />
+          companies. Some of our <span>success stories</span>.
+        </h2>
 
+        <div>
+          <section>
+            <p>
+              “The team perfectly fit the specialized skill set required. They
+              focused on the most essential features helping us launch the
+              platform eight months faster than planned.”
+            </p>
+            <h5>Kady Baker</h5>
+            <h6>Product Manager at Bookmark</h6>
+            <img src="" alt="Photo by Kady Baker" />
+          </section>
 
-  Build & manage distributed teams like no one else.
+          <section>
+            <p>
+              “We needed to automate our entire onboarding process. The team
+              came in and built out the whole journey. Since going live, user
+              retention has gone through the roof!”
+            </p>
+            <h5>Aiysha Reese</h5>
+            <h6>Founder of Manage</h6>
+            <img src="" alt="Photo by Aiysha Reese" />
+          </section>
 
-  Experienced Individuals
-  Our network is made up of highly experienced professionals who are 
-  passionate about what they do.
+          <section>
+            <p>
+              “Amazing. Our team helped us build an app that delivered a new
+              experience for hiring a physio. The launch was an instant success
+              with 100k downloads in the first month.”
+            </p>
+            <h5>Arthur Clarke</h5>
+            <h6>Co-founder of MyPhysio</h6>
+            <img src="" alt="Photo by Arthur Clarke" />
+          </section>
+        </div>
+      </section>
 
-  Easy to Implement
-  Our processes have been refined over years of implementation meaning 
-  our teams always deliver.
+      <section>
+        <h3 id="ready">Ready to get started?</h3>
+        <a href="#" id="contact-us" aria-labelledby="contact-us ready"
+          >contact us</a
+        >
+      </section>
+    </main>
 
-  Enhanced Productivity
-  Our customized platform with in-built analytics helps you manage your 
-  distributed teams.
-
-
-
-  Delivering real results for top companies. Some of our success stories.
-
-  “The team perfectly fit the specialized skill set required. They focused 
-  on the most essential features helping us launch the platform eight months 
-  faster than planned.”
-  Kady Baker
-  Product Manager at Bookmark
-
-  “We needed to automate our entire onboarding process. The team came in and 
-  built out the whole journey. Since going live, user retention has gone 
-  through the roof!”
-  Aiysha Reese
-  Founder of Manage
-
-  “Amazing. Our team helped us build an app that delivered a new experience for 
-  hiring a physio. The launch was an instant success with 100k downloads in the 
-  first month.”
-  Arthur Clarke
-  Co-founder of MyPhysio
-
-
-
-  Ready to get started?
-
-  contact us
-
-
-
+    <!--
   home
   about
 
@@ -78,6 +137,5 @@
   Call Us : 949-833-7432
 
   Copyright 2020. All Rights Reserved
-  
-</body>
+  --></body>
 </html>
