--- a/src/index.html
+++ b/src/index.html
@@ -38,9 +38,9 @@
         </div>
         <svg
           class="home-banner__bg-pattern-home-2"
-          xmlns="http://www.w3.org/2000/svg"
           width="358"
           height="100"
+          aria-hidden
         >
           <g fill="none" fill-rule="evenodd">
             <circle cx="100" cy="100" r="100" fill="#2C6269" />
@@ -63,7 +63,6 @@
 
       <section class="features-section">
         <div class="features-section__title-contain">
-          <div class="features-section__title-border"></div>
           <h2 class="features-section__title">
             Build & manage distributed teams like no one else.
           </h2>
@@ -126,9 +125,9 @@
 
         <svg
           class="features-section__bg-pattern-home-3"
-          xmlns="http://www.w3.org/2000/svg"
           width="200"
           height="244"
+          aria-hidden
         >
           <g fill="none" fill-rule="evenodd">
             <path fill="#2C6269" d="M100 144H0V44h100z" />
@@ -153,12 +152,7 @@
 
         <div class="stories-section__list">
           <section class="story stories-section__story">
-            <svg
-              class="story__quotes"
-              xmlns="http://www.w3.org/2000/svg"
-              width="67"
-              height="56"
-            >
+            <svg class="story__quotes" width="67" height="56" aria-hidden>
               <path
                 fill="#2C6269"
                 d="M51.273 56c4.638 0 8.368-1.322 11.19-3.967 2.823-2.645 4.235-5.799 4.235-9.46 0-2.95-.429-5.494-1.286-7.63a197.251 197.251 0 01-2.495-6.562c-.806-2.237-1.21-4.933-1.21-8.087 0-2.746.454-5.798 1.361-9.155C63.976 7.782 65.286 4.069 67 0H55.356c-3.73 3.662-7.032 7.833-9.905 12.512-2.873 4.68-5.166 9.359-6.88 14.038C36.857 31.23 36 35.4 36 39.063c0 5.391 1.361 9.562 4.083 12.512C42.805 54.525 46.535 56 51.273 56zm-36 0c4.638 0 8.368-1.322 11.19-3.967 2.823-2.645 4.235-5.799 4.235-9.46 0-2.95-.429-5.494-1.286-7.63a197.251 197.251 0 01-2.495-6.562c-.806-2.237-1.21-4.933-1.21-8.087 0-2.746.454-5.798 1.361-9.155C27.976 7.782 29.286 4.069 31 0H19.356c-3.73 3.662-7.032 7.833-9.905 12.512-2.873 4.68-5.166 9.359-6.88 14.038C.857 31.23 0 35.4 0 39.063c0 5.391 1.361 9.562 4.083 12.512C6.805 54.525 10.535 56 15.273 56z"
@@ -181,12 +175,7 @@
           </section>
 
           <section class="story stories-section__story">
-            <svg
-              class="story__quotes"
-              xmlns="http://www.w3.org/2000/svg"
-              width="67"
-              height="56"
-            >
+            <svg class="story__quotes" width="67" height="56" aria-hidden>
               <path
                 fill="#2C6269"
                 d="M51.273 56c4.638 0 8.368-1.322 11.19-3.967 2.823-2.645 4.235-5.799 4.235-9.46 0-2.95-.429-5.494-1.286-7.63a197.251 197.251 0 01-2.495-6.562c-.806-2.237-1.21-4.933-1.21-8.087 0-2.746.454-5.798 1.361-9.155C63.976 7.782 65.286 4.069 67 0H55.356c-3.73 3.662-7.032 7.833-9.905 12.512-2.873 4.68-5.166 9.359-6.88 14.038C36.857 31.23 36 35.4 36 39.063c0 5.391 1.361 9.562 4.083 12.512C42.805 54.525 46.535 56 51.273 56zm-36 0c4.638 0 8.368-1.322 11.19-3.967 2.823-2.645 4.235-5.799 4.235-9.46 0-2.95-.429-5.494-1.286-7.63a197.251 197.251 0 01-2.495-6.562c-.806-2.237-1.21-4.933-1.21-8.087 0-2.746.454-5.798 1.361-9.155C27.976 7.782 29.286 4.069 31 0H19.356c-3.73 3.662-7.032 7.833-9.905 12.512-2.873 4.68-5.166 9.359-6.88 14.038C.857 31.23 0 35.4 0 39.063c0 5.391 1.361 9.562 4.083 12.512C6.805 54.525 10.535 56 15.273 56z"
@@ -209,12 +198,7 @@
           </section>
 
           <section class="story stories-section__story">
-            <svg
-              class="story__quotes"
-              xmlns="http://www.w3.org/2000/svg"
-              width="67"
-              height="56"
-            >
+            <svg class="story__quotes" width="67" height="56" aria-hidden>
               <path
                 fill="#2C6269"
                 d="M51.273 56c4.638 0 8.368-1.322 11.19-3.967 2.823-2.645 4.235-5.799 4.235-9.46 0-2.95-.429-5.494-1.286-7.63a197.251 197.251 0 01-2.495-6.562c-.806-2.237-1.21-4.933-1.21-8.087 0-2.746.454-5.798 1.361-9.155C63.976 7.782 65.286 4.069 67 0H55.356c-3.73 3.662-7.032 7.833-9.905 12.512-2.873 4.68-5.166 9.359-6.88 14.038C36.857 31.23 36 35.4 36 39.063c0 5.391 1.361 9.562 4.083 12.512C42.805 54.525 46.535 56 51.273 56zm-36 0c4.638 0 8.368-1.322 11.19-3.967 2.823-2.645 4.235-5.799 4.235-9.46 0-2.95-.429-5.494-1.286-7.63a197.251 197.251 0 01-2.495-6.562c-.806-2.237-1.21-4.933-1.21-8.087 0-2.746.454-5.798 1.361-9.155C27.976 7.782 29.286 4.069 31 0H19.356c-3.73 3.662-7.032 7.833-9.905 12.512-2.873 4.68-5.166 9.359-6.88 14.038C.857 31.23 0 35.4 0 39.063c0 5.391 1.361 9.562 4.083 12.512C6.805 54.525 10.535 56 15.273 56z"
@@ -239,9 +223,9 @@
 
         <svg
           class="stories-section__bg-pattern-home-4-about-3"
-          xmlns="http://www.w3.org/2000/svg"
           width="147"
           height="100"
+          aria-hidden
         >
           <g fill="none" fill-rule="evenodd">
             <path fill="#002529" d="M0 100h100V0H0z" />
@@ -253,9 +237,9 @@
         </svg>
         <svg
           class="stories-section__bg-pattern-home-5"
-          xmlns="http://www.w3.org/2000/svg"
           width="200"
           height="100"
+          aria-hidden
         >
           <g fill="none" fill-rule="evenodd">
             <path fill="#2C6269" d="M100 100h100V0H100z" />
@@ -272,16 +256,16 @@
       </section>
 
       <section class="started">
-        <h3 class="started-section__title">Ready to get started?</h3>
+        <h3 class="started__title">Ready to get started?</h3>
         <a href="#" id="contact-us" aria-labelledby="contact-us ready"
           >contact us</a
         >
 
         <svg
           class="started__bg-pattern-home-6-about-5"
-          xmlns="http://www.w3.org/2000/svg"
           width="200"
           height="144"
+          aria-hidden
         >
           <g fill="none" fill-rule="evenodd">
             <path fill="#2C6269" d="M100 144H0V44h100z" />
